[gd_scene load_steps=9 format=3 uid="uid://caxrexn0e3rwp"]

[ext_resource type="Script" path="res://cooking-tester/Main.gd" id="1_d0xmu"]
[ext_resource type="Script" path="res://cooking-tester/Ingredient.gd" id="2_tagr5"]
[ext_resource type="Script" path="res://cooking-tester/Composite.gd" id="3_0v26p"]
[ext_resource type="Script" path="res://cooking-tester/Blender.gd" id="3_f74ix"]
[ext_resource type="PackedScene" uid="uid://r70x3i1s73gr" path="res://cooking-tester/ingredient-scenes/Apple.tscn" id="5_v6r2q"]
[ext_resource type="PackedScene" uid="uid://mskyem5tbpxc" path="res://cooking-tester/ingredient-scenes/Pinecone.tscn" id="6_fikex"]
[ext_resource type="PackedScene" uid="uid://dcoloe4qtldjq" path="res://cooking-tester/cooking_tool.tscn" id="7_5bt57"]
[ext_resource type="Script" path="res://cooking-tester/CookingTool.gd" id="8_8ik4y"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("text_output", "text_composite", "text_ingredients", "composite", "result")]
script = ExtResource("1_d0xmu")
text_output = NodePath("Text_Output")
text_composite = NodePath("Text_Composite")
text_ingredients = NodePath("Text_Ingredients")
composite = NodePath("Composite")
result = NodePath("Result")

[node name="Result" type="Node" parent="."]
script = ExtResource("2_tagr5")

[node name="Composite" type="Node" parent="."]
script = ExtResource("3_0v26p")

[node name="Blender" type="Node" parent="."]
script = ExtResource("3_f74ix")

[node name="Button_Blend" type="Button" parent="."]
offset_left = 554.0
offset_top = 19.0
offset_right = 716.0
offset_bottom = 68.0
text = "Blend"
script = ExtResource("3_f74ix")

[node name="Button_Cauldron" type="Button" parent="."]
offset_left = 557.0
offset_top = 135.0
offset_right = 719.0
offset_bottom = 184.0
text = "Cauldron"

[node name="Button_Grill" type="Button" parent="."]
offset_left = 557.0
offset_top = 195.0
offset_right = 719.0
offset_bottom = 244.0
text = "Grill"

[node name="Button_Clear" type="Button" parent="."]
offset_left = 557.0
offset_top = 374.0
offset_right = 709.0
offset_bottom = 425.0
text = "Clear"

[node name="Text_Output" type="Label" parent="."]
offset_left = 168.0
offset_top = 4.0
offset_right = 532.0
offset_bottom = 159.0
text = "Current Results:"

[node name="Text_Composite" type="Label" parent="."]
offset_left = 161.0
offset_top = 200.0
offset_right = 511.0
offset_bottom = 307.0
text = "Current Composite:"

[node name="Text_Ingredients" type="Label" parent="."]
offset_left = 159.0
offset_top = 332.0
offset_right = 522.0
offset_bottom = 516.0
text = "Current Ingredients:"

[node name="Button_Apple" type="Button" parent="."]
offset_left = 9.0
offset_top = 13.0
offset_right = 142.0
offset_bottom = 58.0
text = "Apple"

[node name="Button_Pinecone" type="Button" parent="."]
offset_left = 10.0
offset_top = 71.0
offset_right = 143.0
offset_bottom = 116.0
text = "Pine Cone"

[node name="Apple" parent="." instance=ExtResource("5_v6r2q")]
script = ExtResource("2_tagr5")
stats = {}
types = []

[node name="Pinecone" parent="." instance=ExtResource("6_fikex")]
script = ExtResource("2_tagr5")
types = []

[node name="Cauldron" parent="." instance=ExtResource("7_5bt57")]
script = ExtResource("8_8ik4y")

[connection signal="pressed" from="Button_Blend" to="." method="_on_button_blend_pressed"]
[connection signal="pressed" from="Button_Cauldron" to="." method="_on_button_cauldron_pressed"]
[connection signal="pressed" from="Button_Grill" to="." method="_on_button_grill_pressed"]
[connection signal="pressed" from="Button_Clear" to="." method="_on_button_clear_pressed"]
[connection signal="pressed" from="Button_Apple" to="." method="_on_button_apple_pressed"]
[connection signal="pressed" from="Button_Pinecone" to="." method="_on_button_pinecone_pressed"]
